[slides] add music

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -8,8 +8,8 @@ BIN = $(GBA_LLVM)/bin
 CC = $(BIN)/clang
 GBAFIX = $(BIN)/gbafix
 GRIT = $(BIN)/grit
-LFLAGS = -ltonc
-CFLAGS = -O3 -mthumb --config armv4t-gba.cfg -Wl,-T,gba_cart.ld
+LFLAGS = -ltonc -lAAS
+CFLAGS = -O3 -mthumb --config armv4t-gba.cfg -Wl,-T,gba_cart.ld -funroll-loops
 
 POINTER_LEFT = assets/pointer-left.png assets/wyvern-left.png
 POINTER_RIGHT = assets/pointer-right.png assets/wyvern-right.png
@@ -21,9 +21,16 @@ GBA_CPU_BG_ASM = gba-cpu.s
 COREMARK_BG = assets/coremark.png
 COREMARK_BG_ASM = coremark.s
 
+AAS_DATA = AAS_Data
+AAS_DATA_ASM = AAS_Data.s
 
 C_FILES = $(NAME).c
-ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM) $(COREMARK_BG_ASM)
+ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM) $(COREMARK_BG_ASM) $(AAS_DATA_ASM)
+
+CONV2AAS = $(GBA_LLVM)/bin/conv2aas
+ifeq ($(OS),Windows_NT)
+	CONV2AAS = $(GBA_LLVM)/bin/conv2aas.exe
+endif
 
 $(NAME).gba: $(NAME).elf
 	$(BIN)/llvm-objcopy -O binary $^ $@
@@ -43,6 +50,9 @@ $(GBA_CPU_BG_ASM): $(GBA_CPU_BG)
 
 $(COREMARK_BG_ASM): $(COREMARK_BG)
 	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
+$(AAS_DATA_ASM):
+	$(CONV2AAS) $(AAS_DATA)
 
 .PHONY: clean
 
