add more info to the readme

--- a/common/armv4t-gba.cfg
+++ b/common/armv4t-gba.cfg
@@ -1,4 +1,4 @@
---target=armv4t-none-eabi -mcpu=arm7tdmi
+--target=armv-none-eabi -mcpu=arm7tdmi
 -fno-exceptions
 -fno-rtti
 --sysroot <CFGDIR>/../lib/clang-runtimes/arm-none-eabi/armv4t
