--- a/common/armv4t-gba.cfg
+++ b/common/armv4t-gba.cfg
@@ -1,6 +1,6 @@
---target=armv-none-eabi -mcpu=arm7tdmi
+--target=armv4t-none-unknown-eabi -mfpu=none
 -fno-exceptions
 -fno-rtti
 --sysroot <CFGDIR>/../lib/clang-runtimes/arm-none-eabi/armv4t
-<CFGDIR>/../lib/clang-runtimes/arm-none-eabi/armv4t/lib/gba_crt0.o
+-lcrt0-gba
 -D_LIBCPP_AVAILABILITY_HAS_NO_VERBOSE_ABORT
