[slides] add QR code

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -23,13 +23,15 @@ COREMARK_BG = assets/coremark.png
 COREMARK_BG_ASM = coremark.s
 GBA_MEM_MAP_BG = assets/gba-mem-layout.png
 GBA_MEM_MAP_BG_ASM = gba-mem-layout.s
+QR_CODE_BG = assets/qr-code.png
+QR_CODE_BG_ASM = qr-code.s
 
 AAS_DATA = AAS_Data
 AAS_DATA_ASM = AAS_Data.s
 
 C_FILES = $(NAME).c
 ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM) \
-    $(COREMARK_BG_ASM) $(AAS_DATA_ASM) $(GBA_MEM_MAP_BG_ASM)
+    $(COREMARK_BG_ASM) $(AAS_DATA_ASM) $(GBA_MEM_MAP_BG_ASM) $(QR_CODE_BG_ASM)
 
 CONV2AAS = $(GBA_LLVM)/bin/conv2aas
 ifeq ($(OS),Windows_NT)
@@ -58,6 +60,9 @@ $(GBA_MEM_MAP_BG_ASM): $(GBA_MEM_MAP_BG)
 $(COREMARK_BG_ASM): $(COREMARK_BG)
 	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
 
+$(QR_CODE_BG_ASM): $(QR_CODE_BG)
+	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
 $(AAS_DATA_ASM):
 	$(CONV2AAS) $(AAS_DATA)
 
@@ -65,4 +70,4 @@ $(AAS_DATA_ASM):
 
 clean:
 	rm $(NAME).elf $(NAME).gba pointer* gba-cpu* coremark* \
-      AAS_Data.* gba-mem-layout*
+      AAS_Data.* gba-mem-layout* qr-code*
