[slides] much more content and tweaks. might just about be final

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -23,8 +23,18 @@ COREMARK_GCC_BG = assets/coremark-gcc.png
 COREMARK_GCC_BG_ASM = coremark-gcc.s
 COREMARK_CLANG_BG = assets/coremark-clang.png
 COREMARK_CLANG_BG_ASM = coremark-clang.s
+COREMARK_COMP_BG = assets/coremark-comp.png
+COREMARK_COMP_BG_ASM = coremark-comp.s
 GBA_MEM_MAP_BG = assets/gba-mem-layout.png
 GBA_MEM_MAP_BG_ASM = gba-mem-layout.s
+DEP_GRAPH_BG = assets/dep-graph.png
+DEP_GRAPH_BG_ASM = dep-graph.s
+DEP_GRAPH_RUNTIMES_BG = assets/dep-graph-runtimes.png
+DEP_GRAPH_RUNTIMES_BG_ASM = dep-graph-runtimes.s
+NOKIAS_BG = assets/nokias.png
+NOKIAS_BG_ASM = nokias.s
+TIMELINE_BG = assets/timeline.png
+TIMELINE_BG_ASM = timeline.s
 QR_CODE_BG = assets/qr-code.png
 QR_CODE_BG_ASM = qr-code.s
 
@@ -33,8 +43,10 @@ AAS_DATA_ASM = AAS_Data.s
 
 C_FILES = $(NAME).c
 ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM) \
-    $(COREMARK_GCC_BG_ASM) $(COREMARK_CLANG_BG_ASM) $(AAS_DATA_ASM) \
-    $(GBA_MEM_MAP_BG_ASM) $(QR_CODE_BG_ASM)
+    $(COREMARK_GCC_BG_ASM) $(COREMARK_CLANG_BG_ASM) $(COREMARK_COMP_BG_ASM) \
+    $(DEP_GRAPH_BG_ASM) $(DEP_GRAPH_RUNTIMES_BG_ASM) \
+	$(NOKIAS_BG_ASM) $(TIMELINE_BG_ASM) \
+	$(AAS_DATA_ASM) $(GBA_MEM_MAP_BG_ASM) $(QR_CODE_BG_ASM) \
 
 CONV2AAS = $(GBA_LLVM)/bin/conv2aas
 ifeq ($(OS),Windows_NT)
@@ -66,7 +78,22 @@ $(COREMARK_GCC_BG_ASM): $(COREMARK_GCC_BG)
 $(COREMARK_CLANG_BG_ASM): $(COREMARK_CLANG_BG)
 	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
 
+$(COREMARK_COMP_BG_ASM): $(COREMARK_COMP_BG)
+	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
+$(DEP_GRAPH_BG_ASM): $(DEP_GRAPH_BG)
+	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
+$(DEP_GRAPH_RUNTIMES_BG_ASM): $(DEP_GRAPH_RUNTIMES_BG)
+	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
 $(QR_CODE_BG_ASM): $(QR_CODE_BG)
+	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
+$(NOKIAS_BG_ASM): $(NOKIAS_BG)
+	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
+
+$(TIMELINE_BG_ASM): $(TIMELINE_BG)
 	$(GRIT) $^ -mR4 -gB4 -pn16 -o $*
 
 $(AAS_DATA_ASM):
@@ -76,4 +103,5 @@ $(AAS_DATA_ASM):
 
 clean:
 	rm $(NAME).elf $(NAME).gba pointer* gba-cpu* coremark* \
-      AAS_Data.* gba-mem-layout* qr-code*
+      AAS_Data.* gba-mem-layout* qr-code* dep-graph* nokias* slides.sav \
+      timeline*
