rename llvm-vscode to llvm-dap in LLVM_DISTRIBUTION_COMPONENTS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ set(LLVM_DISTRIBUTION_COMPONENTS
     lld
     lldb
     lldb-server
-    lldb-vscode
+    lldb-dap
     llvm-ar
     llvm-config
     llvm-cov
